fix: modal overflow

--- a/src/components/Modal/styles.scss
+++ b/src/components/Modal/styles.scss
@@ -27,6 +27,7 @@
         width: 90vw;
         max-width: 450px;
         max-height: 85vh;
+        overflow: auto;
         
         &:focus {
             outline: none;
